#1 관련사항 제거 완료

--- a/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
@@ -24,11 +24,7 @@
     "# from sklearn.model_selection import train_test_split\n",
     "\n",
     "import os\n",
-    "import json\n",
-    "\n",
-    "#if you have gpu\n",
-    "if tf.test.is_gpu_available():\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\" "
+    "import json"
    ]
   },
   {
@@ -413,6 +409,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
