update var name

--- a/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
@@ -317,14 +317,14 @@
     "if not os.path.exists(DATA_OUT_PATH):\n",
     "    os.makedirs(DATA_OUT_PATH)\n",
     "\n",
-    "model.save_weights(DATA_OUT_PATH + 'model.h5')"
+    "model.save_weights(DATA_OUT_PATH + 'rnn_model.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 캐글 평가 데이터셋 만들기 TODO"
+    "## 캐글 평가 데이터셋 만들기"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights(DATA_OUT_PATH + 'model.h5')"
+    "model.load_weights(DATA_OUT_PATH + 'rnn_model.h5')"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   },
   "pycharm": {
    "stem_cell": {
