--- a/5.TEXT_SIM/5.3.3_Quora_LSTM-tf2.ipynb
+++ b/5.TEXT_SIM/5.3.3_Quora_LSTM-tf2.ipynb
@@ -32,26 +32,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "base_path = '../5.TEXT_SIM/'"
+    "# 시각화"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "q1c3mIopN57-"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_in_path = base_path + '/data_in/'\n",
-    "data_out_path = base_path + '/data_out/'"
+    "def plot_graphs(history, string):\n",
+    "    plt.plot(history.history[string])\n",
+    "    plt.plot(history.history['val_'+string], '')\n",
+    "    plt.xlabel(\"Epochs\")\n",
+    "    plt.ylabel(string)\n",
+    "    plt.legend([string, 'val_'+string])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 학습 데이터 파일 로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 미리 Global 변수를 지정하자. 파일 명, 파일 위치, 디렉토리 등이 있다.\n",
+    "\n",
+    "DATA_IN_PATH = './data_in/'\n",
+    "DATA_OUT_PATH = './data_out/'\n",
+    "\n",
+    "TRAIN_Q1_DATA_FILE = 'train_q1.npy'\n",
+    "TRAIN_Q2_DATA_FILE = 'train_q2.npy'\n",
+    "TRAIN_LABEL_DATA_FILE = 'train_label.npy'\n",
+    "DATA_CONFIGS = 'data_configs.json'\n",
+    "\n",
+    "## 학습에 필요한 파라메터들에 대해서 지정하는 부분이다.\n",
+    "\n",
+    "BATCH_SIZE = 16\n",
+    "EPOCH = 2\n",
+    "HIDDEN = 64\n",
+    "BUFFER_SIZE = 10000\n",
+    "\n",
+    "NUM_LAYERS = 3\n",
+    "DROPOUT_RATIO = 0.3\n",
+    "\n",
+    "TEST_SPLIT = 0.1\n",
+    "RNG_SEED = 13371447\n",
+    "EMBEDDING_DIM = 128\n",
+    "MAX_SEQ_LEN = 31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 데이터를 불러오는 부분이다. 효과적인 데이터 불러오기를 위해, 미리 넘파이 형태로 저장시킨 데이터를 로드한다.\n",
+    "\n",
+    "q1_data = np.load(open(DATA_IN_PATH + TRAIN_Q1_DATA_FILE, 'rb'))\n",
+    "q2_data = np.load(open(DATA_IN_PATH + TRAIN_Q2_DATA_FILE, 'rb'))\n",
+    "labels = np.load(open(DATA_IN_PATH + TRAIN_LABEL_DATA_FILE, 'rb'))\n",
+    "prepro_configs = None\n",
+    "\n",
+    "with open(DATA_IN_PATH + DATA_CONFIGS, 'r') as f:\n",
+    "    prepro_configs = json.load(f)"
    ]
   },
   {
@@ -76,79 +131,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "XqBTKs0MN9s2"
-   },
-   "outputs": [],
-   "source": [
-    "batch_size = 256\n",
-    "num_epochs = 2\n",
-    "\n",
-    "test_split = 0.1\n",
-    "seed = 13\n",
-    "\n",
-    "model_name = 'malstm'\n",
-    "max_length = input_data.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "3840A8nNOPUl"
-   },
-   "outputs": [],
-   "source": [
-    "x = np.stack((q1_data, q2_data), axis=1)\n",
-    "y = labels\n",
-    "train_x, valid_x, train_y, valid_y = train_test_split(x, y, test_size=test_split, random_state=seed)\n",
-    "\n",
-    "train_q1 = train_x[:,0]\n",
-    "train_q2 = train_x[:,1]\n",
-    "valid_q1 = valid_x[:,0]\n",
-    "valid_q2 = valid_x[:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(268673, 31)\n",
-      "(268673, 31)\n",
-      "(29853, 31)\n",
-      "(29853, 31)\n",
-      "(268673,)\n",
-      "(29853,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(train_q1.shape)\n",
-    "print(train_q2.shape)\n",
-    "print(valid_q1.shape)\n",
-    "print(valid_q2.shape)\n",
-    "print(train_y.shape)\n",
-    "print(valid_y.shape)"
+    "VOCAB_SIZE = prepro_configs['vocab_size']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Orbt7YELOQ91"
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1_data_len = np.array([min(len(x), MAX_SEQ_LEN) for x in q1_data])\n",
+    "q2_data_len = np.array([min(len(x), MAX_SEQ_LEN) for x in q2_data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 데이터를 나누어 저장하자. sklearn의 train_test_split을 사용하면 유용하다. 하지만, 쿼라 데이터의 경우는\n",
+    "## 입력이 1개가 아니라 2개이다. 따라서, np.stack을 사용하여 두개를 하나로 쌓은다음 활용하여 분류한다.\n",
+    "\n",
+    "X = np.stack((q1_data, q2_data), axis=1)\n",
+    "y = labels\n",
+    "train_X, test_X, train_y, test_y = train_test_split(X, y, test_size=TEST_SPLIT, random_state=RNG_SEED)\n",
+    "\n",
+    "train_Q1 = train_X[:,0]\n",
+    "train_Q2 = train_X[:,1]\n",
+    "test_Q1 = test_X[:,0]\n",
+    "test_Q2 = test_X[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def mapping_fn(base, hypothesis, labels=None):\n",
@@ -175,7 +197,7 @@
     "id": "nvXOXlSywPR2"
    },
    "source": [
-    "### Model Setup"
+    "# 모델 정의"
    ]
   },
   {
@@ -226,6 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "max_length = q1_data.shape[1]\n",
+    "\n",
     "kargs = {'vocab_size': prepro_configs['vocab_size'],\n",
     "        'embedding_size': 300,\n",
     "        'lstm_dimension': 300}"
@@ -256,12 +280,27 @@
     "checkpoint_path = data_out_path + model_name + '/weights.{epoch:02d}-{val_loss:.2f}'\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
     "\n",
+    "if os.path.exists(checkpoint_dir):\n",
+    "    print(\"{} -- Folder already exists \\n\".format(checkpoint_dir))\n",
+    "else:\n",
+    "    os.makedirs(checkpoint_dir, exist_ok=True)\n",
+    "    print(\"{} -- Folder create complete \\n\".format(checkpoint_dir))\n",
+    "\n",
     "cp_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    checkpoint_path, verbose=1, save_weights_only=True)\n",
     "\n",
-    "model.fit(dataset, epochs=num_epochs,\n",
-    "         validation_data=validation_dataset,\n",
-    "         callbacks=[cp_callback])"
+    "history = model.fit(dataset, epochs=num_epochs,\n",
+    "                 validation_data=validation_dataset,\n",
+    "                 callbacks=[cp_callback])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(history, 'accuracy')"
    ]
   },
   {
@@ -297,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
