--- a/7.BERT/finetune_bert.ipynb
+++ b/7.BERT/finetune_bert.ipynb
@@ -21,7 +21,7 @@
     "import re\n",
     "\n",
     "# if you have gpu\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"6\""
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
    ]
   },
   {
@@ -250,8 +250,7 @@
     "        print(train_sent)\n",
     "        pass\n",
     "\n",
-    "train_data_sent_pads = np.asarray(pad_sequences(train_data_sents, maxlen=MAX_LEN, padding='post'), dtype=np.int32) # convert into numpy\n",
-    "train_data_labels = np.asarray(train_data_labels, dtype=np.int32) #레이블 토크나이징 리스트\n",
+    "train_data_sent_pads = pad_sequences(train_data_sents, maxlen=MAX_LEN, padding='post') # convert into numpy\n",
     "\n",
     "print(\"num sents, labels {}, {}\".format(len(train_data_sent_pads), len(train_data_labels)))"
    ]
