update again gpt2

--- a/8.GPT/gpt_finetune.ipynb
+++ b/8.GPT/gpt_finetune.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,8 @@
       "255/255 [==============================] - 80s 314ms/sample - loss: 3.0103 - accuracy_function: 0.0948 - val_loss: 2.4793 - val_accuracy_function: 0.1140\n",
       "Epoch 2/3\n",
       "255/255 [==============================] - 62s 245ms/sample - loss: 2.5058 - accuracy_function: 0.1263 - val_loss: 2.3935 - val_accuracy_function: 0.1320\n",
-      "Epoch 3/3\n"
+      "Epoch 3/3\n",
+      "255/255 [==============================] - 61s 238ms/sample - loss: 2.2565 - accuracy_function: 0.1401 - val_loss: 2.3878 - val_accuracy_function: 0.1463\n"
      ]
     }
    ],
@@ -175,9 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "우리나라 사람들은 왜 이렇게 술을 많이 마셨을까.\n"
+     ]
+    }
+   ],
    "source": [
     "sent = '우리나라'\n",
     "gen_count = 100\n",
