build & summary 제거

--- a/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,62 +158,20 @@
     "        x = self.fc1(x)\n",
     "        x = self.fc2(x)\n",
     "        \n",
-    "        return x\n",
-    "        \n",
-    "    def build_graph(self, input_shape):\n",
-    "        input_shape_wo_batch = input_shape[1:]\n",
-    "        self.build(input_shape)\n",
-    "        inputs = tf.keras.Input(shape=input_shape_wo_batch)\n",
-    "        \n",
-    "        _ = self.call(inputs)"
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"cnn_classifier_eng\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "embedding_6 (Embedding)      (None, 174, 128)          9480448   \n",
-      "_________________________________________________________________\n",
-      "conv1d_18 (Conv1D)           (None, 172, 100)          38500     \n",
-      "_________________________________________________________________\n",
-      "conv1d_19 (Conv1D)           (None, 171, 100)          51300     \n",
-      "_________________________________________________________________\n",
-      "conv1d_20 (Conv1D)           (None, 170, 100)          64100     \n",
-      "_________________________________________________________________\n",
-      "global_max_pooling1d_6 (Glob (None, 100)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 174, 128)          0         \n",
-      "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 250)               75250     \n",
-      "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 1)                 251       \n",
-      "=================================================================\n",
-      "Total params: 9,709,849\n",
-      "Trainable params: 9,709,849\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = CNNClassifier(**kargs)\n",
     "\n",
     "model.compile(optimizer='adam',\n",
     "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "# For Summary\n",
-    "model.build_graph(input_shape=(BATCH_SIZE, MAX_LEN))\n",
-    "model.summary()"
+    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -417,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   },
   "pycharm": {
    "stem_cell": {
