--- a/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,52 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"cnn_classifier_kr\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "embedding_2 (Embedding)      (None, 8, 128)            9480448   \n",
-      "_________________________________________________________________\n",
-      "conv1d_6 (Conv1D)            (None, 6, 100)            38500     \n",
-      "_________________________________________________________________\n",
-      "conv1d_7 (Conv1D)            (None, 5, 100)            51300     \n",
-      "_________________________________________________________________\n",
-      "conv1d_8 (Conv1D)            (None, 4, 100)            64100     \n",
-      "_________________________________________________________________\n",
-      "global_max_pooling1d_2 (Glob (None, 100)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 8, 128)            0         \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 250)               75250     \n",
-      "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 1)                 251       \n",
-      "=================================================================\n",
-      "Total params: 9,709,849\n",
-      "Trainable params: 9,709,849\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = CNNClassifier(**kargs)\n",
     "\n",
     "model.compile(optimizer='adam',\n",
     "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "# For Summary\n",
-    "model.build_graph(input_shape=(BATCH_SIZE, MAX_LEN))\n",
-    "model.summary()"
+    "              metrics=['accuracy'])"
    ]
   },
   {
