--- a/8.GPT/gpt_finetune.ipynb
+++ b/8.GPT/gpt_finetune.ipynb
@@ -60,12 +60,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = GPT2Model('./gpt_ckpt')"
+    "gpt_model = GPT2Model('./gpt_ckpt')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tf_top_k_top_p_filtering(logits, top_k=0, top_p=0.0, filter_value=-99999):\n",
+    "    _logits = logits.numpy()\n",
+    "    top_k = min(top_k, logits.shape[-1])  # Safety check\n",
+    "    if top_k > 0:\n",
+    "        # Remove all tokens with a probability less than the last token of the top-k\n",
+    "        indices_to_remove = logits < tf.math.top_k(logits, top_k)[0][..., -1, None]\n",
+    "        _logits[indices_to_remove] = filter_value\n",
+    "\n",
+    "    if top_p > 0.0:\n",
+    "        sorted_logits = tf.sort(logits, direction='DESCENDING')\n",
+    "        sorted_indices = tf.argsort(logits, direction='DESCENDING')\n",
+    "        cumulative_probs = tf.math.cumsum(tf.nn.softmax(sorted_logits, axis=-1), axis=-1)\n",
+    "\n",
+    "        # Remove tokens with cumulative probability above the threshold\n",
+    "        sorted_indices_to_remove = cumulative_probs > top_p\n",
+    "        # Shift the indices to the right to keep also the first token above the threshold\n",
+    "        sorted_indices_to_remove = tf.concat([[False], sorted_indices_to_remove[..., :-1]], axis=0)\n",
+    "        indices_to_remove = sorted_indices[sorted_indices_to_remove].numpy().tolist()\n",
+    "        \n",
+    "        _logits[indices_to_remove] = filter_value\n",
+    "    return tf.constant([_logits])\n",
+    "\n",
+    "\n",
+    "def generate_sent(seed_word, model, max_step=100, greedy=False, top_k=0, top_p=0.):\n",
+    "    sent = seed_word\n",
+    "    gen_count = 100\n",
+    "\n",
+    "    toked = tokenizer(sent)\n",
+    "    for _ in range(max_step):\n",
+    "        input_ids = tf.constant([vocab[vocab.bos_token],]  + vocab[toked])[None, :] \n",
+    "        outputs = model(input_ids)[:, -1, :]\n",
+    "        if greedy:\n",
+    "            gen = vocab.to_tokens(tf.argmax(outputs, axis=-1).numpy().tolist()[0])\n",
+    "        else:\n",
+    "            output_logit = tf_top_k_top_p_filtering(outputs[0], top_k=top_k, top_p=top_p)\n",
+    "            gen = vocab.to_tokens(tf.random.categorical(output_logit, 1).numpy().tolist()[0])[0]\n",
+    "        if gen == '</s>':\n",
+    "            break\n",
+    "        sent += gen.replace('▁', ' ')\n",
+    "        toked = tokenizer(sent)\n",
+    "\n",
+    "    return sent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'이때문에 일부 전문가들은 “이번 사건은 ‘제2의'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_sent('이때', gpt_model, max_step=10, greedy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'이때 \\'귀태\\'의 저자 최인호는 \"막말이 정치인에 대한 인신공격으로 이어지지는 않을 것\"이라면서도 \"다만 박근혜는 (박근혜 대통령의) 국정철학에 대해 많은 것을 알게 될 것\"이라고 말했다.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_sent('이때', gpt_model, top_k=30, top_p=0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,18 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss=loss_function,\n",
+    "gpt_model.compile(loss=loss_function,\n",
     "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
     "              metrics=[accuracy_function])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +225,7 @@
      "output_type": "stream",
      "text": [
       "Train on 255 samples, validate on 29 samples\n",
-      "Epoch 1/3\n"
+      "Epoch 1/10\n"
      ]
     },
     {
@@ -152,11 +242,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "255/255 [==============================] - 80s 314ms/sample - loss: 3.0103 - accuracy_function: 0.0948 - val_loss: 2.4793 - val_accuracy_function: 0.1140\n",
-      "Epoch 2/3\n",
-      "255/255 [==============================] - 62s 245ms/sample - loss: 2.5058 - accuracy_function: 0.1263 - val_loss: 2.3935 - val_accuracy_function: 0.1320\n",
-      "Epoch 3/3\n",
-      "255/255 [==============================] - 61s 238ms/sample - loss: 2.2565 - accuracy_function: 0.1401 - val_loss: 2.3878 - val_accuracy_function: 0.1463\n"
+      "255/255 [==============================] - 69s 271ms/sample - loss: 2.9908 - accuracy_function: 0.1000 - val_loss: 2.4743 - val_accuracy_function: 0.1148\n",
+      "Epoch 2/10\n",
+      "255/255 [==============================] - 48s 189ms/sample - loss: 2.5006 - accuracy_function: 0.1256 - val_loss: 2.3912 - val_accuracy_function: 0.1326\n",
+      "Epoch 3/10\n",
+      "255/255 [==============================] - 47s 186ms/sample - loss: 2.2519 - accuracy_function: 0.1412 - val_loss: 2.3786 - val_accuracy_function: 0.1472\n",
+      "Epoch 4/10\n",
+      "255/255 [==============================] - 48s 186ms/sample - loss: 2.0414 - accuracy_function: 0.1549 - val_loss: 2.3757 - val_accuracy_function: 0.1597\n",
+      "Epoch 5/10\n",
+      "255/255 [==============================] - 48s 188ms/sample - loss: 1.8267 - accuracy_function: 0.1676 - val_loss: 2.4177 - val_accuracy_function: 0.1724\n",
+      "Epoch 6/10\n",
+      "255/255 [==============================] - 49s 193ms/sample - loss: 1.6278 - accuracy_function: 0.1787 - val_loss: 2.4846 - val_accuracy_function: 0.1841\n",
+      "Epoch 7/10\n",
+      "255/255 [==============================] - 48s 188ms/sample - loss: 1.4264 - accuracy_function: 0.1911 - val_loss: 2.6376 - val_accuracy_function: 0.1965\n",
+      "Epoch 8/10\n",
+      "255/255 [==============================] - 48s 188ms/sample - loss: 1.2319 - accuracy_function: 0.2033 - val_loss: 2.7258 - val_accuracy_function: 0.2093\n",
+      "Epoch 9/10\n",
+      "255/255 [==============================] - 49s 190ms/sample - loss: 1.0323 - accuracy_function: 0.2158 - val_loss: 2.7949 - val_accuracy_function: 0.2215\n",
+      "Epoch 10/10\n",
+      "255/255 [==============================] - 48s 190ms/sample - loss: 0.8720 - accuracy_function: 0.2290 - val_loss: 2.8987 - val_accuracy_function: 0.2342\n"
      ]
     }
    ],
@@ -166,8 +270,8 @@
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\n",
     "\n",
-    "history = model.fit(input_data, output_data, \n",
-    "                    batch_size=16, epochs=3,\n",
+    "history = gpt_model.fit(input_data, output_data, \n",
+    "                    batch_size=16, epochs=10,\n",
     "                    validation_split=0.1)#, callbacks=[earlystop_callback])\n",
     "\n",
     "\n",
@@ -176,32 +280,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "우리나라 사람들은 왜 이렇게 술을 많이 마셨을까.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'이때에 마침 길가 선술집에서 김첨지는 길가 선술집에 있는 이의 다급한 목소리와는 달리 매우 반가운 듯이 손<unk>하였다.'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sent = '우리나라'\n",
-    "gen_count = 100\n",
-    "\n",
-    "toked = tokenizer(sent)\n",
-    "for _ in range(gen_count):\n",
-    "    input_ids = tf.constant([vocab[vocab.bos_token],]  + vocab[toked])[None, :] \n",
-    "    outputs = model(input_ids)\n",
-    "    gen = vocab.to_tokens(tf.argmax(outputs, axis=-1).numpy().tolist()[0])[-1]\n",
-    "    if gen == '</s>':\n",
-    "        break\n",
-    "    sent += gen.replace('▁', ' ')\n",
-    "    toked = tokenizer(sent)\n",
-    "    \n",
-    "print(sent)"
+    "generate_sent('이때', gpt_model, greedy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_sent('이때', gpt_model, top_k=30, top_p=0.95)"
    ]
   }
  ],
