--- a/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
@@ -132,7 +132,7 @@
     "VALID_SPLIT = 0.1\n",
     "MAX_LEN = train_input.shape[1]\n",
     "\n",
-    "kargs = {'vocab_size': prepro_configs['vocab_size']+1,\n",
+    "kargs = {'vocab_size': prepro_configs['vocab_size'],\n",
     "        'embedding_dimension': 100,\n",
     "        'dropout_rate': 0.2,\n",
     "        'lstm_dimension': 150,\n",
@@ -217,7 +217,7 @@
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\n",
     "\n",
-    "checkpoint_path = DATA_OUT_PATH + model_name + '/weights.{epoch:02d}-{val_accuracy:.2f}.h5'\n",
+    "checkpoint_path = DATA_OUT_PATH + model_name + '/weights.h5'\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
     "\n",
     "# Create path if exists\n",
@@ -302,7 +302,7 @@
     "DATA_OUT_PATH = './data_out/'\n",
     "TEST_INPUT_DATA = 'test_input.npy'\n",
     "TEST_ID_DATA = 'test_id.npy'\n",
-    "SAVE_FILE_NM = 'weights.04-0.89.h5'\n",
+    "\n",
     "\n",
     "test_input = np.load(open(DATA_IN_PATH + TEST_INPUT_DATA, 'rb'))\n",
     "test_input = pad_sequences(test_input, maxlen=test_input.shape[1])"
@@ -321,6 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SAVE_FILE_NM = 'weights.h5'\n",
+    "\n",
     "model.load_weights(os.path.join(DATA_OUT_PATH, model_name, SAVE_FILE_NM))"
    ]
   },
