--- a/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
@@ -95,7 +95,7 @@
     "VALID_SPLIT = 0.1\n",
     "MAX_LEN = train_input.shape[1]\n",
     "\n",
-    "kargs = {'vocab_size': prepro_configs['vocab_size']+1,\n",
+    "kargs = {'vocab_size': prepro_configs['vocab_size'],\n",
     "        'embedding_size': 128,\n",
     "        'num_filters': 100,\n",
     "        'dropout_rate': 0.5,\n",
@@ -141,14 +141,7 @@
     "        x = self.fc1(x)\n",
     "        x = self.fc2(x)\n",
     "        \n",
-    "        return x\n",
-    "        \n",
-    "    def build_graph(self, input_shape):\n",
-    "        input_shape_wo_batch = input_shape[1:]\n",
-    "        self.build(input_shape)\n",
-    "        inputs = tf.keras.Input(shape=input_shape_wo_batch)\n",
-    "        \n",
-    "        _ = self.call(inputs)"
+    "        return x"
    ]
   },
   {
@@ -195,7 +188,7 @@
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
     "\n",
-    "checkpoint_path = DATA_OUT_PATH + model_name + '/weights.{epoch:02d}-{val_accuracy:.2f}.h5'\n",
+    "checkpoint_path = DATA_OUT_PATH + model_name + '/weights.h5'\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
     "\n",
     "# Create path if exists\n",
@@ -273,7 +266,7 @@
     "DATA_OUT_PATH = './data_out/'\n",
     "INPUT_TEST_DATA = 'nsmc_test_input.npy'\n",
     "LABEL_TEST_DATA = 'nsmc_test_label.npy'\n",
-    "SAVE_FILE_NM = 'weights.02-0.83.h5' #저장된 best model 이름\n",
+    "SAVE_FILE_NM = 'weights.h5' #저장된 best model 이름\n",
     "\n",
     "test_input = np.load(open(DATA_IN_PATH + INPUT_TEST_DATA, 'rb'))\n",
     "test_input = pad_sequences(test_input, maxlen=test_input.shape[1])\n",
