--- a/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
@@ -22,7 +22,10 @@
     "import os\n",
     "import json\n",
     "\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
    ]
   },
   {
