--- a/7.BERT/finetune_bert.ipynb
+++ b/7.BERT/finetune_bert.ipynb
@@ -21,7 +21,10 @@
     "import re\n",
     "\n",
     "# if you have gpu\n",
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "\n",
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
    ]
   },
   {
