--- a/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
@@ -25,7 +25,10 @@
     "import os\n",
     "import json\n",
     "\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "\n",
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
    ]
   },
   {
@@ -85,6 +88,13 @@
     "with open(DATA_IN_PATH + DATA_CONFIGS, 'r') as f:\n",
     "    prepro_configs = json.load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
