--- a/8.GPT/gpt_finetune.ipynb
+++ b/8.GPT/gpt_finetune.ipynb
@@ -35,8 +35,7 @@
     "                                               unknown_token='<unk>',\n",
     "                                               padding_token='<pad>',\n",
     "                                               bos_token='<s>',\n",
-    "                                               eos_token='</s>')\n",
-    "# model = TFGPT2LMHeadModel.from_pretrained('./gpt_ckpt')"
+    "                                               eos_token='</s>')"
    ]
   },
   {
@@ -272,10 +271,7 @@
     "\n",
     "history = gpt_model.fit(input_data, output_data, \n",
     "                    batch_size=16, epochs=10,\n",
-    "                    validation_split=0.1)#, callbacks=[earlystop_callback])\n",
-    "\n",
-    "\n",
-    "# history = model.fit(dataset, epochs=2)#, callbacks=[earlystop_callback])"
+    "                    validation_split=0.1)#, callbacks=[earlystop_callback])"
    ]
   },
   {
