seed num & weights update

--- a/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
@@ -25,10 +25,7 @@
     "import os\n",
     "import json\n",
     "\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "SEED_NUM = 1234\n",
-    "tf.random.set_seed(SEED_NUM)"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -51,6 +48,16 @@
     "    plt.ylabel(string)\n",
     "    plt.legend([string, 'val_'+string])\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
    ]
   },
   {
@@ -88,13 +95,6 @@
     "with open(DATA_IN_PATH + DATA_CONFIGS, 'r') as f:\n",
     "    prepro_configs = json.load(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
