--- a/6.CHATBOT/6.4 Transformer.ipynb
+++ b/6.CHATBOT/6.4 Transformer.ipynb
@@ -52,6 +52,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -933,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
