update preprocess in 6ch

--- a/6.CHATBOT/6.4 Transformer.ipynb
+++ b/6.CHATBOT/6.4 Transformer.ipynb
@@ -26,7 +26,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from preprocess import *"
    ]
   },
   {
@@ -943,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
