--- a/5.TEXT_SIM/5.3.3_Quora_LSTM-tf2.ipynb
+++ b/5.TEXT_SIM/5.3.3_Quora_LSTM-tf2.ipynb
@@ -26,6 +26,7 @@
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import json"
    ]
@@ -177,9 +178,9 @@
    "source": [
     "model = Model(**kargs)\n",
     "\n",
-    "model.compile(optimizer=tf.keras.optimizers.Adam(1e-4),\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(1e-3),\n",
     "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
-    "              metrics=[tf.keras.metrics.BinaryCrossentropy()])"
+    "              metrics=[tf.keras.metrics.BinaryAccuracy(name='accuracy')])"
    ]
   },
   {
@@ -245,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graphs(history, 'accuracy')"
+    "plot_graphs(history, 'loss')"
    ]
   },
   {
@@ -254,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graphs(history, 'loss')"
+    "plot_graphs(history, 'accuracy')"
    ]
   },
   {
@@ -313,8 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = model.predict((test_q1_data, test_q2_data), batch_size=BATCH_SIZE)\n",
-    "predictions = predictions.squeeze(-1)"
+    "predictions = model.predict((test_q1_data, test_q2_data), batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "output = pd.DataFrame( data={\"test_id\":test_id_data, \"is_duplicate\": list(predictions)} )\n",
-    "output.to_csv(\"cnn_predict.csv\", index=False, quoting=3)"
+    "output.to_csv(DATA_OUT_PATH+\"rnn_predict.csv\", index=False, quoting=3)"
    ]
   }
  ],
